google anlytics up load

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <link rel="stylesheet" href="./css/mobile_style.css">
     <link rel="stylesheet" href="./css/tablet_style.css">
     <link rel="stylesheet" href="./font/themify-icons-font/themify-icons/themify-icons.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CSJNPV4RD0"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-CSJNPV4RD0');
+    </script>
 </head>
 <body>
     <nav id="main">
