--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="./css/mobile_style.css">
     <link rel="stylesheet" href="./css/tablet_style.css">
     <link rel="stylesheet" href="./font/themify-icons-font/themify-icons/themify-icons.css">
+    <meta name = "description" content = "Giới thiệu về địa điểm du lịch tại Quảng "/>
+    <meta name="keywords" 
+         content="ĐỊA ĐIỂM DU LỊCH VIỆT NAM">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CSJNPV4RD0"></script>
     <script>
